<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/p"
    android:gravity="center_vertical"
    tools:context=".ui.home.HomeFragment">


    <Button
        android:id="@+id/but3"
        android:layout_width="83dp"
        android:layout_height="82dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:baselineAligned="false"
        android:drawableTop="@drawable/csdn"
        android:text="@string/but_3"
        app:layout_constraintStart_toEndOf="@+id/but2"
        app:layout_constraintTop_toBottomOf="@+id/searchTextInputLayout"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/but9"
        android:layout_width="77dp"
        android:layout_height="65dp"
        android:layout_below="@id/searchTextInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:text="搜索"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/searchTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchTextInputLayout"
        android:layout_width="260dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:hintEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            android:layout_width="263dp"
            android:layout_height="57dp"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_home"
        android:layout_width="115dp"
        android:layout_height="47dp"


        android:layout_marginTop="164dp"
        android:text="Easyq"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/but6"
        android:layout_width="83dp"
        android:layout_height="82dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:baselineAligned="false"
        android:drawableTop="@drawable/gongzhonghao"
        android:text="@string/but_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/but8"
        app:layout_constraintTop_toBottomOf="@+id/but1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/but5"
        android:layout_width="83dp"
        android:layout_height="82dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:baselineAligned="false"
        android:drawableTop="@drawable/zhihu"
        android:text="@string/but_5"
        app:layout_constraintStart_toStartOf="@+id/searchTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/but2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/but2"
        android:layout_width="83dp"
        android:layout_height="82dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:baselineAligned="false"
        android:drawableTop="@drawable/chatgpt"
        android:text="@string/but_2"
        app:layout_constraintStart_toStartOf="@+id/searchTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/searchTextInputLayout"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/but1"
        android:layout_width="83dp"
        android:layout_height="82dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:baselineAligned="false"
        android:drawableTop="@drawable/cainiao"
        android:text="@string/but_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/but4"
        app:layout_constraintTop_toBottomOf="@+id/searchTextInputLayout"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/but7"
        android:layout_width="83dp"
        android:layout_height="82dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:baselineAligned="false"
        android:drawableTop="@drawable/w3c"
        android:text="@string/but_7"
        app:layout_constraintStart_toEndOf="@+id/but5"
        app:layout_constraintTop_toBottomOf="@+id/but3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/but4"
        android:layout_width="83dp"
        android:layout_height="82dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:baselineAligned="false"
        android:drawableTop="@drawable/blog"
        android:text="@string/but_4"
        app:layout_constraintStart_toEndOf="@+id/but3"
        app:layout_constraintTop_toBottomOf="@+id/searchTextInputLayout"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/but8"
        android:layout_width="83dp"
        android:layout_height="82dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:baselineAligned="false"
        android:drawableTop="@drawable/tools"
        android:text="@string/but_8"
        app:layout_constraintStart_toEndOf="@+id/but7"
        app:layout_constraintTop_toBottomOf="@+id/but4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_mingyan"
        android:layout_width="399dp"
        android:layout_height="95dp"

        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but8" />


    <!--    <WebView-->
    <!--        android:id="@+id/webview"-->
    <!--        android:layout_width="366dp"-->
    <!--        android:layout_height="496dp"-->
    <!--        android:layout_marginTop="24dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.488"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/but7"-->
    <!--        app:layout_constraintVertical_bias="0.111"-->
    <!--        tools:ignore="MissingConstraints" />-->

</androidx.constraintlayout.widget.ConstraintLayout>